Refactor URL handling in TokenDiscCommand to use URI for improved reliability